--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>HELLO WORLD!</h1>
+<?php
+if ($db->getAttribute(PDO::ATTR_DRIVER_NAME) == 'mysql') {
+$stmt = $db->prepare('select * from foo',
+array(PDO::MYSQL_ATTR_USE_BUFFERED_QUERY => true));
+} else {
+die("приложение работает только с mysql; Следует использовать \$stmt->fetchAll() вместо этого");
+}
+?>
